# chip8

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.c  chip8.h  gfx.c  gfx.h  main.c  utils.c  utils.h
